<resources>
    <string name="app_name">skin_analysis_app</string>
    <string name="an_image">an image</string>
    <string name="image_view">Image View</string>
    <string name="parsing">Parsing</string>
    <string name="back">Back</string>
    <string name="run_model">Running the model...</string>
    <string name="album">앨범</string>
    <string name="camera">카메라</string>
    <string name="check">확인</string>
    <string name="change">이름 변경</string>
    <string name="camera_mode_none">None</string>
    <string name="camera_mode_auto">Auto</string>
    <string name="camera_mode_bokeh">Bokeh</string>
    <string name="camera_mode_hdr">HDR</string>
    <string name="camera_mode_night">Night</string>
    <string name="camera_mode_face_retouch">Face Retouch</string>
    <string name="analyze_image">이미지 분석</string>

    <string name="TextView_text"><b>분석할 이미지를 가져올\n  방법을 선택해주세요</b></string>
    <string name="camera_permissions_request_with_rationale">You can\'t use camera extensions unless CameraX Extensions has access to your camera.</string>
    <string name="camera_permissions_request">Allow CameraX Extensions access to your camera to try camera extensions.</string>
    <string name="guide_text">가이드라인에 얼굴을 맞춰 사진을 촬영해주세요</string>
    <string name="camera_permissions_action">Turn On</string>
    <string name="enter_your_name_hint">사용자 이름을 입력해 주세요.</string>
    <string name="TextView_text2"><b>이미지에 대해 분석하시겠습니까?</b></string>
    <string name="change_direction">좌 우 변경</string>
</resources>